lab3/150050061-17V051001/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> VOID MAIN LPAREN RPAREN LCURL body RCURL
Rule 2     prog -> VOID MAIN LPAREN RPAREN LCURL RCURL
Rule 3     body -> stmt body
Rule 4     body -> stmt
Rule 5     stmt -> decl SEMICOLON
Rule 6     stmt -> assgn_list SEMICOLON
Rule 7     assgn_list -> assgn_list COMMA assgn
Rule 8     assgn_list -> assgn
Rule 9     assgn -> ptr_assgn
Rule 10    assgn -> num_assgn
Rule 11    decl -> INT decl_list
Rule 12    decl_list -> decl_list COMMA ID
Rule 13    decl_list -> decl_list COMMA ptr
Rule 14    decl_list -> ID
Rule 15    decl_list -> ptr
Rule 16    ptr_assgn -> ptr EQUALS ptr_expr
Rule 17    num_assgn -> ID EQUALS ptr_expr
Rule 18    ptr_expr -> ptr_expr PLUS ptr_factor
Rule 19    ptr_expr -> ptr_expr MINUS ptr_factor
Rule 20    ptr_expr -> ptr_factor
Rule 21    ptr_factor -> ptr_factor STAR ptr_term
Rule 22    ptr_factor -> ptr_factor SLASH ptr_term
Rule 23    ptr_factor -> ptr_term
Rule 24    ptr_term -> MINUS ptr_term
Rule 25    ptr_term -> ptr_expr_base
Rule 26    ptr_expr_base -> ID
Rule 27    ptr_expr_base -> NUM
Rule 28    ptr_expr_base -> ptr
Rule 29    ptr_expr_base -> addr
Rule 30    ptr_expr_base -> LPAREN ptr_expr RPAREN
Rule 31    ptr -> STAR ptr
Rule 32    ptr -> STAR ID
Rule 33    ptr -> STAR addr
Rule 34    addr -> AND ID
Rule 35    addr -> AND ptr
Rule 36    addr -> AND addr

Terminals, with rules where they appear

AND                  : 34 35 36
COMMA                : 7 12 13
EQUALS               : 16 17
ID                   : 12 14 17 26 32 34
INT                  : 11
LCURL                : 1 2
LPAREN               : 1 2 30
MAIN                 : 1 2
MINUS                : 19 24
NUM                  : 27
PLUS                 : 18
RCURL                : 1 2
RPAREN               : 1 2 30
SEMICOLON            : 5 6
SLASH                : 22
STAR                 : 21 31 32 33
VOID                 : 1 2
error                : 

Nonterminals, with rules where they appear

addr                 : 29 33 36
assgn                : 7 8
assgn_list           : 6 7
body                 : 1 3
decl                 : 5
decl_list            : 11 12 13
num_assgn            : 10
prog                 : 0
ptr                  : 13 15 16 28 31 35
ptr_assgn            : 9
ptr_expr             : 16 17 18 19 30
ptr_expr_base        : 25
ptr_factor           : 18 19 20 21 22
ptr_term             : 21 22 23 24
stmt                 : 3 4

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . VOID MAIN LPAREN RPAREN LCURL body RCURL
    (2) prog -> . VOID MAIN LPAREN RPAREN LCURL RCURL

    VOID            shift and go to state 1

    prog                           shift and go to state 2

state 1

    (1) prog -> VOID . MAIN LPAREN RPAREN LCURL body RCURL
    (2) prog -> VOID . MAIN LPAREN RPAREN LCURL RCURL

    MAIN            shift and go to state 3


state 2

    (0) S' -> prog .



state 3

    (1) prog -> VOID MAIN . LPAREN RPAREN LCURL body RCURL
    (2) prog -> VOID MAIN . LPAREN RPAREN LCURL RCURL

    LPAREN          shift and go to state 4


state 4

    (1) prog -> VOID MAIN LPAREN . RPAREN LCURL body RCURL
    (2) prog -> VOID MAIN LPAREN . RPAREN LCURL RCURL

    RPAREN          shift and go to state 5


state 5

    (1) prog -> VOID MAIN LPAREN RPAREN . LCURL body RCURL
    (2) prog -> VOID MAIN LPAREN RPAREN . LCURL RCURL

    LCURL           shift and go to state 6


state 6

    (1) prog -> VOID MAIN LPAREN RPAREN LCURL . body RCURL
    (2) prog -> VOID MAIN LPAREN RPAREN LCURL . RCURL
    (3) body -> . stmt body
    (4) body -> . stmt
    (5) stmt -> . decl SEMICOLON
    (6) stmt -> . assgn_list SEMICOLON
    (11) decl -> . INT decl_list
    (7) assgn_list -> . assgn_list COMMA assgn
    (8) assgn_list -> . assgn
    (9) assgn -> . ptr_assgn
    (10) assgn -> . num_assgn
    (16) ptr_assgn -> . ptr EQUALS ptr_expr
    (17) num_assgn -> . ID EQUALS ptr_expr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr

    RCURL           shift and go to state 11
    INT             shift and go to state 17
    ID              shift and go to state 16
    STAR            shift and go to state 8

    body                           shift and go to state 12
    decl                           shift and go to state 7
    assgn                          shift and go to state 10
    num_assgn                      shift and go to state 13
    ptr_assgn                      shift and go to state 18
    assgn_list                     shift and go to state 14
    stmt                           shift and go to state 15
    ptr                            shift and go to state 9

state 7

    (5) stmt -> decl . SEMICOLON

    SEMICOLON       shift and go to state 19


state 8

    (31) ptr -> STAR . ptr
    (32) ptr -> STAR . ID
    (33) ptr -> STAR . addr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    ID              shift and go to state 23
    STAR            shift and go to state 8
    AND             shift and go to state 20

    ptr                            shift and go to state 22
    addr                           shift and go to state 21

state 9

    (16) ptr_assgn -> ptr . EQUALS ptr_expr

    EQUALS          shift and go to state 24


state 10

    (8) assgn_list -> assgn .

    SEMICOLON       reduce using rule 8 (assgn_list -> assgn .)
    COMMA           reduce using rule 8 (assgn_list -> assgn .)


state 11

    (2) prog -> VOID MAIN LPAREN RPAREN LCURL RCURL .

    $end            reduce using rule 2 (prog -> VOID MAIN LPAREN RPAREN LCURL RCURL .)


state 12

    (1) prog -> VOID MAIN LPAREN RPAREN LCURL body . RCURL

    RCURL           shift and go to state 25


state 13

    (10) assgn -> num_assgn .

    SEMICOLON       reduce using rule 10 (assgn -> num_assgn .)
    COMMA           reduce using rule 10 (assgn -> num_assgn .)


state 14

    (6) stmt -> assgn_list . SEMICOLON
    (7) assgn_list -> assgn_list . COMMA assgn

    SEMICOLON       shift and go to state 27
    COMMA           shift and go to state 26


state 15

    (3) body -> stmt . body
    (4) body -> stmt .
    (3) body -> . stmt body
    (4) body -> . stmt
    (5) stmt -> . decl SEMICOLON
    (6) stmt -> . assgn_list SEMICOLON
    (11) decl -> . INT decl_list
    (7) assgn_list -> . assgn_list COMMA assgn
    (8) assgn_list -> . assgn
    (9) assgn -> . ptr_assgn
    (10) assgn -> . num_assgn
    (16) ptr_assgn -> . ptr EQUALS ptr_expr
    (17) num_assgn -> . ID EQUALS ptr_expr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr

    RCURL           reduce using rule 4 (body -> stmt .)
    INT             shift and go to state 17
    ID              shift and go to state 16
    STAR            shift and go to state 8

    body                           shift and go to state 28
    decl                           shift and go to state 7
    assgn                          shift and go to state 10
    num_assgn                      shift and go to state 13
    ptr_assgn                      shift and go to state 18
    assgn_list                     shift and go to state 14
    stmt                           shift and go to state 15
    ptr                            shift and go to state 9

state 16

    (17) num_assgn -> ID . EQUALS ptr_expr

    EQUALS          shift and go to state 29


state 17

    (11) decl -> INT . decl_list
    (12) decl_list -> . decl_list COMMA ID
    (13) decl_list -> . decl_list COMMA ptr
    (14) decl_list -> . ID
    (15) decl_list -> . ptr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr

    ID              shift and go to state 32
    STAR            shift and go to state 8

    ptr                            shift and go to state 31
    decl_list                      shift and go to state 30

state 18

    (9) assgn -> ptr_assgn .

    SEMICOLON       reduce using rule 9 (assgn -> ptr_assgn .)
    COMMA           reduce using rule 9 (assgn -> ptr_assgn .)


state 19

    (5) stmt -> decl SEMICOLON .

    INT             reduce using rule 5 (stmt -> decl SEMICOLON .)
    ID              reduce using rule 5 (stmt -> decl SEMICOLON .)
    STAR            reduce using rule 5 (stmt -> decl SEMICOLON .)
    RCURL           reduce using rule 5 (stmt -> decl SEMICOLON .)


state 20

    (34) addr -> AND . ID
    (35) addr -> AND . ptr
    (36) addr -> AND . addr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    ID              shift and go to state 34
    STAR            shift and go to state 8
    AND             shift and go to state 20

    ptr                            shift and go to state 35
    addr                           shift and go to state 33

state 21

    (33) ptr -> STAR addr .

    COMMA           reduce using rule 33 (ptr -> STAR addr .)
    SEMICOLON       reduce using rule 33 (ptr -> STAR addr .)
    EQUALS          reduce using rule 33 (ptr -> STAR addr .)
    STAR            reduce using rule 33 (ptr -> STAR addr .)
    SLASH           reduce using rule 33 (ptr -> STAR addr .)
    PLUS            reduce using rule 33 (ptr -> STAR addr .)
    MINUS           reduce using rule 33 (ptr -> STAR addr .)
    RPAREN          reduce using rule 33 (ptr -> STAR addr .)


state 22

    (31) ptr -> STAR ptr .

    COMMA           reduce using rule 31 (ptr -> STAR ptr .)
    SEMICOLON       reduce using rule 31 (ptr -> STAR ptr .)
    EQUALS          reduce using rule 31 (ptr -> STAR ptr .)
    STAR            reduce using rule 31 (ptr -> STAR ptr .)
    SLASH           reduce using rule 31 (ptr -> STAR ptr .)
    PLUS            reduce using rule 31 (ptr -> STAR ptr .)
    MINUS           reduce using rule 31 (ptr -> STAR ptr .)
    RPAREN          reduce using rule 31 (ptr -> STAR ptr .)


state 23

    (32) ptr -> STAR ID .

    COMMA           reduce using rule 32 (ptr -> STAR ID .)
    SEMICOLON       reduce using rule 32 (ptr -> STAR ID .)
    EQUALS          reduce using rule 32 (ptr -> STAR ID .)
    STAR            reduce using rule 32 (ptr -> STAR ID .)
    SLASH           reduce using rule 32 (ptr -> STAR ID .)
    PLUS            reduce using rule 32 (ptr -> STAR ID .)
    MINUS           reduce using rule 32 (ptr -> STAR ID .)
    RPAREN          reduce using rule 32 (ptr -> STAR ID .)


state 24

    (16) ptr_assgn -> ptr EQUALS . ptr_expr
    (18) ptr_expr -> . ptr_expr PLUS ptr_factor
    (19) ptr_expr -> . ptr_expr MINUS ptr_factor
    (20) ptr_expr -> . ptr_factor
    (21) ptr_factor -> . ptr_factor STAR ptr_term
    (22) ptr_factor -> . ptr_factor SLASH ptr_term
    (23) ptr_factor -> . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 42
    ptr_expr_base                  shift and go to state 38
    ptr_factor                     shift and go to state 41
    ptr_expr                       shift and go to state 43
    ptr                            shift and go to state 44

state 25

    (1) prog -> VOID MAIN LPAREN RPAREN LCURL body RCURL .

    $end            reduce using rule 1 (prog -> VOID MAIN LPAREN RPAREN LCURL body RCURL .)


state 26

    (7) assgn_list -> assgn_list COMMA . assgn
    (9) assgn -> . ptr_assgn
    (10) assgn -> . num_assgn
    (16) ptr_assgn -> . ptr EQUALS ptr_expr
    (17) num_assgn -> . ID EQUALS ptr_expr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr

    ID              shift and go to state 16
    STAR            shift and go to state 8

    assgn                          shift and go to state 46
    num_assgn                      shift and go to state 13
    ptr_assgn                      shift and go to state 18
    ptr                            shift and go to state 9

state 27

    (6) stmt -> assgn_list SEMICOLON .

    INT             reduce using rule 6 (stmt -> assgn_list SEMICOLON .)
    ID              reduce using rule 6 (stmt -> assgn_list SEMICOLON .)
    STAR            reduce using rule 6 (stmt -> assgn_list SEMICOLON .)
    RCURL           reduce using rule 6 (stmt -> assgn_list SEMICOLON .)


state 28

    (3) body -> stmt body .

    RCURL           reduce using rule 3 (body -> stmt body .)


state 29

    (17) num_assgn -> ID EQUALS . ptr_expr
    (18) ptr_expr -> . ptr_expr PLUS ptr_factor
    (19) ptr_expr -> . ptr_expr MINUS ptr_factor
    (20) ptr_expr -> . ptr_factor
    (21) ptr_factor -> . ptr_factor STAR ptr_term
    (22) ptr_factor -> . ptr_factor SLASH ptr_term
    (23) ptr_factor -> . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 42
    ptr_expr_base                  shift and go to state 38
    ptr_factor                     shift and go to state 41
    ptr_expr                       shift and go to state 47
    ptr                            shift and go to state 44

state 30

    (11) decl -> INT decl_list .
    (12) decl_list -> decl_list . COMMA ID
    (13) decl_list -> decl_list . COMMA ptr

    SEMICOLON       reduce using rule 11 (decl -> INT decl_list .)
    COMMA           shift and go to state 48


state 31

    (15) decl_list -> ptr .

    COMMA           reduce using rule 15 (decl_list -> ptr .)
    SEMICOLON       reduce using rule 15 (decl_list -> ptr .)


state 32

    (14) decl_list -> ID .

    COMMA           reduce using rule 14 (decl_list -> ID .)
    SEMICOLON       reduce using rule 14 (decl_list -> ID .)


state 33

    (36) addr -> AND addr .

    STAR            reduce using rule 36 (addr -> AND addr .)
    SLASH           reduce using rule 36 (addr -> AND addr .)
    PLUS            reduce using rule 36 (addr -> AND addr .)
    MINUS           reduce using rule 36 (addr -> AND addr .)
    SEMICOLON       reduce using rule 36 (addr -> AND addr .)
    COMMA           reduce using rule 36 (addr -> AND addr .)
    RPAREN          reduce using rule 36 (addr -> AND addr .)
    EQUALS          reduce using rule 36 (addr -> AND addr .)


state 34

    (34) addr -> AND ID .

    STAR            reduce using rule 34 (addr -> AND ID .)
    SLASH           reduce using rule 34 (addr -> AND ID .)
    PLUS            reduce using rule 34 (addr -> AND ID .)
    MINUS           reduce using rule 34 (addr -> AND ID .)
    SEMICOLON       reduce using rule 34 (addr -> AND ID .)
    COMMA           reduce using rule 34 (addr -> AND ID .)
    RPAREN          reduce using rule 34 (addr -> AND ID .)
    EQUALS          reduce using rule 34 (addr -> AND ID .)


state 35

    (35) addr -> AND ptr .

    STAR            reduce using rule 35 (addr -> AND ptr .)
    SLASH           reduce using rule 35 (addr -> AND ptr .)
    PLUS            reduce using rule 35 (addr -> AND ptr .)
    MINUS           reduce using rule 35 (addr -> AND ptr .)
    SEMICOLON       reduce using rule 35 (addr -> AND ptr .)
    COMMA           reduce using rule 35 (addr -> AND ptr .)
    RPAREN          reduce using rule 35 (addr -> AND ptr .)
    EQUALS          reduce using rule 35 (addr -> AND ptr .)


state 36

    (29) ptr_expr_base -> addr .

    STAR            reduce using rule 29 (ptr_expr_base -> addr .)
    SLASH           reduce using rule 29 (ptr_expr_base -> addr .)
    PLUS            reduce using rule 29 (ptr_expr_base -> addr .)
    MINUS           reduce using rule 29 (ptr_expr_base -> addr .)
    SEMICOLON       reduce using rule 29 (ptr_expr_base -> addr .)
    COMMA           reduce using rule 29 (ptr_expr_base -> addr .)
    RPAREN          reduce using rule 29 (ptr_expr_base -> addr .)


state 37

    (24) ptr_term -> MINUS . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_expr_base                  shift and go to state 38
    ptr                            shift and go to state 44
    ptr_term                       shift and go to state 49

state 38

    (25) ptr_term -> ptr_expr_base .

    STAR            reduce using rule 25 (ptr_term -> ptr_expr_base .)
    SLASH           reduce using rule 25 (ptr_term -> ptr_expr_base .)
    PLUS            reduce using rule 25 (ptr_term -> ptr_expr_base .)
    MINUS           reduce using rule 25 (ptr_term -> ptr_expr_base .)
    SEMICOLON       reduce using rule 25 (ptr_term -> ptr_expr_base .)
    COMMA           reduce using rule 25 (ptr_term -> ptr_expr_base .)
    RPAREN          reduce using rule 25 (ptr_term -> ptr_expr_base .)


state 39

    (27) ptr_expr_base -> NUM .

    STAR            reduce using rule 27 (ptr_expr_base -> NUM .)
    SLASH           reduce using rule 27 (ptr_expr_base -> NUM .)
    PLUS            reduce using rule 27 (ptr_expr_base -> NUM .)
    MINUS           reduce using rule 27 (ptr_expr_base -> NUM .)
    SEMICOLON       reduce using rule 27 (ptr_expr_base -> NUM .)
    COMMA           reduce using rule 27 (ptr_expr_base -> NUM .)
    RPAREN          reduce using rule 27 (ptr_expr_base -> NUM .)


state 40

    (30) ptr_expr_base -> LPAREN . ptr_expr RPAREN
    (18) ptr_expr -> . ptr_expr PLUS ptr_factor
    (19) ptr_expr -> . ptr_expr MINUS ptr_factor
    (20) ptr_expr -> . ptr_factor
    (21) ptr_factor -> . ptr_factor STAR ptr_term
    (22) ptr_factor -> . ptr_factor SLASH ptr_term
    (23) ptr_factor -> . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 42
    ptr_expr_base                  shift and go to state 38
    ptr_factor                     shift and go to state 41
    ptr_expr                       shift and go to state 50
    ptr                            shift and go to state 44

state 41

    (20) ptr_expr -> ptr_factor .
    (21) ptr_factor -> ptr_factor . STAR ptr_term
    (22) ptr_factor -> ptr_factor . SLASH ptr_term

    PLUS            reduce using rule 20 (ptr_expr -> ptr_factor .)
    MINUS           reduce using rule 20 (ptr_expr -> ptr_factor .)
    SEMICOLON       reduce using rule 20 (ptr_expr -> ptr_factor .)
    COMMA           reduce using rule 20 (ptr_expr -> ptr_factor .)
    RPAREN          reduce using rule 20 (ptr_expr -> ptr_factor .)
    STAR            shift and go to state 51
    SLASH           shift and go to state 52


state 42

    (23) ptr_factor -> ptr_term .

    STAR            reduce using rule 23 (ptr_factor -> ptr_term .)
    SLASH           reduce using rule 23 (ptr_factor -> ptr_term .)
    PLUS            reduce using rule 23 (ptr_factor -> ptr_term .)
    MINUS           reduce using rule 23 (ptr_factor -> ptr_term .)
    SEMICOLON       reduce using rule 23 (ptr_factor -> ptr_term .)
    COMMA           reduce using rule 23 (ptr_factor -> ptr_term .)
    RPAREN          reduce using rule 23 (ptr_factor -> ptr_term .)


state 43

    (16) ptr_assgn -> ptr EQUALS ptr_expr .
    (18) ptr_expr -> ptr_expr . PLUS ptr_factor
    (19) ptr_expr -> ptr_expr . MINUS ptr_factor

    SEMICOLON       reduce using rule 16 (ptr_assgn -> ptr EQUALS ptr_expr .)
    COMMA           reduce using rule 16 (ptr_assgn -> ptr EQUALS ptr_expr .)
    PLUS            shift and go to state 54
    MINUS           shift and go to state 53


state 44

    (28) ptr_expr_base -> ptr .

    STAR            reduce using rule 28 (ptr_expr_base -> ptr .)
    SLASH           reduce using rule 28 (ptr_expr_base -> ptr .)
    PLUS            reduce using rule 28 (ptr_expr_base -> ptr .)
    MINUS           reduce using rule 28 (ptr_expr_base -> ptr .)
    SEMICOLON       reduce using rule 28 (ptr_expr_base -> ptr .)
    COMMA           reduce using rule 28 (ptr_expr_base -> ptr .)
    RPAREN          reduce using rule 28 (ptr_expr_base -> ptr .)


state 45

    (26) ptr_expr_base -> ID .

    STAR            reduce using rule 26 (ptr_expr_base -> ID .)
    SLASH           reduce using rule 26 (ptr_expr_base -> ID .)
    PLUS            reduce using rule 26 (ptr_expr_base -> ID .)
    MINUS           reduce using rule 26 (ptr_expr_base -> ID .)
    SEMICOLON       reduce using rule 26 (ptr_expr_base -> ID .)
    COMMA           reduce using rule 26 (ptr_expr_base -> ID .)
    RPAREN          reduce using rule 26 (ptr_expr_base -> ID .)


state 46

    (7) assgn_list -> assgn_list COMMA assgn .

    SEMICOLON       reduce using rule 7 (assgn_list -> assgn_list COMMA assgn .)
    COMMA           reduce using rule 7 (assgn_list -> assgn_list COMMA assgn .)


state 47

    (17) num_assgn -> ID EQUALS ptr_expr .
    (18) ptr_expr -> ptr_expr . PLUS ptr_factor
    (19) ptr_expr -> ptr_expr . MINUS ptr_factor

    SEMICOLON       reduce using rule 17 (num_assgn -> ID EQUALS ptr_expr .)
    COMMA           reduce using rule 17 (num_assgn -> ID EQUALS ptr_expr .)
    PLUS            shift and go to state 54
    MINUS           shift and go to state 53


state 48

    (12) decl_list -> decl_list COMMA . ID
    (13) decl_list -> decl_list COMMA . ptr
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr

    ID              shift and go to state 56
    STAR            shift and go to state 8

    ptr                            shift and go to state 55

state 49

    (24) ptr_term -> MINUS ptr_term .

    STAR            reduce using rule 24 (ptr_term -> MINUS ptr_term .)
    SLASH           reduce using rule 24 (ptr_term -> MINUS ptr_term .)
    PLUS            reduce using rule 24 (ptr_term -> MINUS ptr_term .)
    MINUS           reduce using rule 24 (ptr_term -> MINUS ptr_term .)
    SEMICOLON       reduce using rule 24 (ptr_term -> MINUS ptr_term .)
    COMMA           reduce using rule 24 (ptr_term -> MINUS ptr_term .)
    RPAREN          reduce using rule 24 (ptr_term -> MINUS ptr_term .)


state 50

    (30) ptr_expr_base -> LPAREN ptr_expr . RPAREN
    (18) ptr_expr -> ptr_expr . PLUS ptr_factor
    (19) ptr_expr -> ptr_expr . MINUS ptr_factor

    RPAREN          shift and go to state 57
    PLUS            shift and go to state 54
    MINUS           shift and go to state 53


state 51

    (21) ptr_factor -> ptr_factor STAR . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 58
    ptr_expr_base                  shift and go to state 38
    ptr                            shift and go to state 44

state 52

    (22) ptr_factor -> ptr_factor SLASH . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 59
    ptr_expr_base                  shift and go to state 38
    ptr                            shift and go to state 44

state 53

    (19) ptr_expr -> ptr_expr MINUS . ptr_factor
    (21) ptr_factor -> . ptr_factor STAR ptr_term
    (22) ptr_factor -> . ptr_factor SLASH ptr_term
    (23) ptr_factor -> . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 42
    ptr_expr_base                  shift and go to state 38
    ptr_factor                     shift and go to state 60
    ptr                            shift and go to state 44

state 54

    (18) ptr_expr -> ptr_expr PLUS . ptr_factor
    (21) ptr_factor -> . ptr_factor STAR ptr_term
    (22) ptr_factor -> . ptr_factor SLASH ptr_term
    (23) ptr_factor -> . ptr_term
    (24) ptr_term -> . MINUS ptr_term
    (25) ptr_term -> . ptr_expr_base
    (26) ptr_expr_base -> . ID
    (27) ptr_expr_base -> . NUM
    (28) ptr_expr_base -> . ptr
    (29) ptr_expr_base -> . addr
    (30) ptr_expr_base -> . LPAREN ptr_expr RPAREN
    (31) ptr -> . STAR ptr
    (32) ptr -> . STAR ID
    (33) ptr -> . STAR addr
    (34) addr -> . AND ID
    (35) addr -> . AND ptr
    (36) addr -> . AND addr

    MINUS           shift and go to state 37
    ID              shift and go to state 45
    NUM             shift and go to state 39
    LPAREN          shift and go to state 40
    STAR            shift and go to state 8
    AND             shift and go to state 20

    addr                           shift and go to state 36
    ptr_term                       shift and go to state 42
    ptr_expr_base                  shift and go to state 38
    ptr_factor                     shift and go to state 61
    ptr                            shift and go to state 44

state 55

    (13) decl_list -> decl_list COMMA ptr .

    COMMA           reduce using rule 13 (decl_list -> decl_list COMMA ptr .)
    SEMICOLON       reduce using rule 13 (decl_list -> decl_list COMMA ptr .)


state 56

    (12) decl_list -> decl_list COMMA ID .

    COMMA           reduce using rule 12 (decl_list -> decl_list COMMA ID .)
    SEMICOLON       reduce using rule 12 (decl_list -> decl_list COMMA ID .)


state 57

    (30) ptr_expr_base -> LPAREN ptr_expr RPAREN .

    STAR            reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)
    SLASH           reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)
    PLUS            reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)
    MINUS           reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)
    SEMICOLON       reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)
    COMMA           reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)
    RPAREN          reduce using rule 30 (ptr_expr_base -> LPAREN ptr_expr RPAREN .)


state 58

    (21) ptr_factor -> ptr_factor STAR ptr_term .

    STAR            reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)
    SLASH           reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)
    PLUS            reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)
    MINUS           reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)
    SEMICOLON       reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)
    COMMA           reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)
    RPAREN          reduce using rule 21 (ptr_factor -> ptr_factor STAR ptr_term .)


state 59

    (22) ptr_factor -> ptr_factor SLASH ptr_term .
